# breakthrough

./: .gitignore  CMakeLists.txt  README.md
include/: app.hpp  logic.hpp
public/: index.template.html
rsrc/: backdrop.frag  ball.frag  blocks.frag  paddle.frag  quad.vert
src/: app.cpp  logic.cpp
